sidebar'ı tamamladım ve responsive yapmaya çalıştım.

--- a/index.html
+++ b/index.html
@@ -15,29 +15,97 @@
 	<body>
 		<div class="container">
 			<div class="sidebar">
-				<div class="logo">Panel</div>
+				<div class="logo">
+					<div class="logo-item-wrapper">
+						<img src="images/icons8-logo.svg" alt="" class="logo-icon" />
+						<p class="logo-item-text">Dashboard</p>
+					</div>
+				</div>
 				<div class="sidebar-menu-1">
-					<div class="home">Home</div>
-					<div class="profile">Profile</div>
-					<div class="messages">Messages</div>
-					<div class="history">History</div>
-					<div class="tasks">Tasks</div>
-					<div class="communities">Communities</div>
+					<div class="menu-item-wrapper">
+						<img
+							src="images/home_24dp_E3E3E3_FILL0_wght100_GRAD0_opsz24.svg"
+							alt=""
+							class="icon"
+						/>
+						<p class="menu-item-text">Home</p>
+					</div>
+					<div class="menu-item-wrapper">
+						<img
+							src="images/id_card_24dp_E3E3E3_FILL0_wght100_GRAD0_opsz24.svg"
+							alt=""
+							class="icon"
+						/>
+						<p class="menu-item-text">Profile</p>
+					</div>
+					<div class="menu-item-wrapper">
+						<img
+							src="images/chat_24dp_E3E3E3_FILL0_wght100_GRAD0_opsz24.svg"
+							alt=""
+							class="icon"
+						/>
+						<p class="menu-item-text">Messages</p>
+					</div>
+					<div class="menu-item-wrapper">
+						<img
+							src="images/history_24dp_E3E3E3_FILL0_wght100_GRAD0_opsz24.svg"
+							alt=""
+							class="icon"
+						/>
+						<p class="menu-item-text">History</p>
+					</div>
+					<div class="menu-item-wrapper">
+						<img
+							src="images/task_24dp_E3E3E3_FILL0_wght100_GRAD0_opsz24.svg"
+							alt=""
+							class="icon"
+						/>
+						<p class="menu-item-text">Tasks</p>
+					</div>
+					<div class="menu-item-wrapper">
+						<img
+							src="images/groups_24dp_E3E3E3_FILL0_wght100_GRAD0_opsz24.svg"
+							alt=""
+							class="icon"
+						/>
+						<p class="menu-item-text">Communities</p>
+					</div>
 				</div>
 				<div class="sidebar-menu-2">
-					<div class="settings">Settings</div>
-					<div class="support">Support</div>
-					<div class="privacy">Privacy</div>
+					<div class="menu-item-wrapper">
+						<img
+							src="images/settings_24dp_E3E3E3_FILL0_wght100_GRAD0_opsz24.svg"
+							alt=""
+							class="icon"
+						/>
+						<p class="menu-item-text">Settings</p>
+					</div>
+					<div class="menu-item-wrapper">
+						<img
+							src="images/help_24dp_E3E3E3_FILL0_wght100_GRAD0_opsz24.svg"
+							alt=""
+							class="icon"
+						/>
+						<p class="menu-item-text">Support</p>
+					</div>
+					<div class="menu-item-wrapper">
+						<img
+							src="images/lock_24dp_E3E3E3_FILL0_wght100_GRAD0_opsz24.svg"
+							alt=""
+							class="icon"
+						/>
+						<p class="menu-item-text">Privacy</p>
+					</div>
 				</div>
 			</div>
 			<div class="header">
 				<div class="header-top">
-					<div class="search-container"></div>
-					<div class="profile-container"></div>
+					<div class="search-container"><img src="images/" alt=""><input type="search"></div>
+					<div class="profile-container"><div class="profile-icon"></div><div class="profile-name">Morgan Oakley</div></div>
 				</div>
 				<div class="header-bottom">
-					<div class="greet-container"></div>
-					<div class="header-buttons"></div>
+					<div class="greet-container">morgan Oakley</div>
+					<div class="header-buttons"><button>new</button> <button>upload</button> <button>share</button></div>
 				</div>
 			</div>
 			<article class="projects-container">
