header kısmını yapmaya çalıştım ve grid responsive yapı öğrenmeye çalıştım.

--- a/index.html
+++ b/index.html
@@ -100,12 +100,43 @@
 			</div>
 			<div class="header">
 				<div class="header-top">
-					<div class="search-container"><img src="images/" alt=""><input type="search"></div>
-					<div class="profile-container"><div class="profile-icon"></div><div class="profile-name">Morgan Oakley</div></div>
+					<div class="search-container header-container">
+						<img
+							class="search-icon header-icon"
+							src="images/search_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg"
+							alt=""
+						/>
+						<input type="search" class="search-input" />
+					</div>
+					<div class="profile-container header-container">
+						<img
+							src="images/notifications_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg"
+							alt=""
+							class="notifications-icon header-icon"
+						/>
+						<img
+							src="images/account_circle_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg"
+							alt=""
+							class="profile-icon"
+						/>
+						<p class="profile-text">Morgan Oakley</p>
+					</div>
 				</div>
 				<div class="header-bottom">
-					<div class="greet-container">morgan Oakley</div>
-					<div class="header-buttons"><button>new</button> <button>upload</button> <button>share</button></div>
+					<div class="greet-container header-container">
+						<img
+							src="images/account_circle_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg"
+							alt=""
+							class="profile-icon"
+						/>
+						<div>
+							<p class="profile-text">Morgan Oakley</p>
+							<p class="profile-text">Morgan Oakley (@morgan)</p>
+						</div>
+					</div>
+					<div class="button-container header-container">
+						<button>New</button><button>Upload</button><button>Share</button>
+					</div>
 				</div>
 			</div>
 			<article class="projects-container">
