responsive ayarlamaları yaptım

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							alt=""
 							class="profile-icon"
 						/>
-						<p class="profile-text">Morgan Oakley</p>
+						<p class="profile-text">Sezi Güngörmüş</p>
 					</div>
 				</div>
 				<div class="header-bottom">
@@ -129,9 +129,9 @@
 							alt=""
 							class="profile-icon"
 						/>
-						<div>
-							<p class="profile-text">Morgan Oakley</p>
-							<p class="profile-text">Morgan Oakley (@morgan)</p>
+						<div class="greet-text-container">
+							<p class="greet-text">Welcome</p>
+							<p class="greet-text">Sezi Güngörmüş (@Mukeİsrail41)</p>
 						</div>
 					</div>
 					<div class="button-container header-container">
