hamburger butonu güncellemesi

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Sign Up</title>
+		<title>ADmin Dashboard</title>
 
 		<link rel="stylesheet" href="./styles/reset.css" />
 		<link rel="stylesheet" href="./styles/style.css" />
@@ -19,6 +19,7 @@
 					<div class="logo-item-wrapper">
 						<img src="images/icons8-logo.svg" alt="" class="logo-icon" />
 						<p class="logo-item-text">Dashboard</p>
+						<div class="icon-skeleton" ><img src="images/close.svg" class="icon-x" alt="" /></div>
 					</div>
 				</div>
 				<div class="sidebar-menu-1">
@@ -65,6 +66,11 @@
 			<div class="header">
 				<div class="header-top">
 					<div class="search-container header-container">
+						<img
+							src="images/menu.svg"
+							class="search-icon header-icon hamburger-icon"
+							alt=""
+						/>
 						<img class="search-icon header-icon" src="images/search.svg" alt="" />
 						<input type="search" class="search-input" />
 					</div>
