hamburger menu tamamladım.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>ADmin Dashboard</title>
+		<title>Admin Dashboard</title>
 
 		<link rel="stylesheet" href="./styles/reset.css" />
 		<link rel="stylesheet" href="./styles/style.css" />
@@ -19,7 +19,7 @@
 					<div class="logo-item-wrapper">
 						<img src="images/icons8-logo.svg" alt="" class="logo-icon" />
 						<p class="logo-item-text">Dashboard</p>
-						<div class="icon-skeleton" ><img src="images/close.svg" class="icon-x" alt="" /></div>
+						<img src="images/close.svg" class="icon-x" alt="" />
 					</div>
 				</div>
 				<div class="sidebar-menu-1">
