card tasarımını tamamladım.

--- a/index.html
+++ b/index.html
@@ -99,13 +99,118 @@
 			</div>
 			<article class="projects-container">
 				<div class="label">Your Projects</div>
-				<div class="projects">
-					<div class="card"></div>
-					<div class="card"></div>
-					<div class="card"></div>
-					<div class="card"></div>
-					<div class="card"></div>
-				</div>
+				
+					<div class="card">
+						<div class="card-text-container">
+							<div class="card-header">Super Cool Project</div>
+							<div class="card-text">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ex
+								odio necessitatibus fugit ea quidem?
+							</div>
+						</div>
+						<div class="card-icons">
+							<img
+								src="/images/star.svg"
+								alt=""
+								class="card-icon"
+								class="card-icon"
+							/><img
+								src="/images/visibility.svg"
+								alt=""
+								class="card-icon"
+								class="card-icon"
+							/><img
+								src="/images/share.svg"
+								alt=""
+								class="card-icon"
+								class="card-icon"
+							/>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-text-container">
+							<div class="card-header">Super Cool Project</div>
+							<div class="card-text">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ex
+								odio necessitatibus fugit ea quidem?
+							</div>
+						</div>
+						<div class="card-icons">
+							<img src="/images/star.svg" alt="" class="card-icon" /><img
+								src="/images/visibility.svg"
+								alt=""
+								class="card-icon"
+							/><img src="/images/share.svg" alt="" class="card-icon" />
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-text-container">
+							<div class="card-header">Super Cool Project</div>
+							<div class="card-text">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+								totam et inventore! Veritatis, consequuntur. Qui, in non aspernatur
+								vel error quo! Sit sint eius dolore, modi adipisci nesciunt velit
+								unde? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto, dolore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, similique?
+							</div>
+						</div>
+						<div class="card-icons">
+							<img src="/images/star.svg" alt="" class="card-icon" /><img
+								src="/images/visibility.svg"
+								alt=""
+								class="card-icon"
+							/><img src="/images/share.svg" alt="" class="card-icon" />
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-text-container">
+							<div class="card-header">Super Cool Project</div>
+							<div class="card-text">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione,
+								minus?
+							</div>
+						</div>
+						<div class="card-icons">
+							<img src="/images/star.svg" alt="" class="card-icon" /><img
+								src="/images/visibility.svg"
+								alt=""
+								class="card-icon"
+							/><img src="/images/share.svg" alt="" class="card-icon" />
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-text-container">
+							<div class="card-header">Super Cool Project</div>
+							<div class="card-text">
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime
+								ipsum dolore impedit, dolores tenetur illo!
+							</div>
+						</div>
+						<div class="card-icons">
+							<img src="/images/star.svg" alt="" class="card-icon" /><img
+								src="/images/visibility.svg"
+								alt=""
+								class="card-icon"
+							/><img src="/images/share.svg" alt="" class="card-icon" />
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-text-container">
+							<div class="card-header">Super Cool Project</div>
+							<div class="card-text">
+								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam
+								placeat sapiente impedit? Aspernatur nam ipsum quod consequuntur
+								deleniti, labore necessitatibus?
+							</div>
+						</div>
+						<div class="card-icons">
+							<img src="/images/star.svg" alt="" class="card-icon" /><img
+								src="/images/visibility.svg"
+								alt=""
+								class="card-icon"
+							/><img src="/images/share.svg" alt="" class="card-icon" />
+						</div>
+					</div>
+				
 			</article>
 			<div class="announcements">
 				<p class="label">Announcements</p>
