image path fix ve projecs-container grid fix

--- a/index.html
+++ b/index.html
@@ -110,17 +110,17 @@
 						</div>
 						<div class="card-icons">
 							<img
-								src="/images/star.svg"
+								src="images/star.svg"
 								alt=""
 								class="card-icon"
 								class="card-icon"
 							/><img
-								src="/images/visibility.svg"
+								src="images/visibility.svg"
 								alt=""
 								class="card-icon"
 								class="card-icon"
 							/><img
-								src="/images/share.svg"
+								src="images/share.svg"
 								alt=""
 								class="card-icon"
 								class="card-icon"
@@ -136,11 +136,11 @@
 							</div>
 						</div>
 						<div class="card-icons">
-							<img src="/images/star.svg" alt="" class="card-icon" /><img
-								src="/images/visibility.svg"
+							<img src="images/star.svg" alt="" class="card-icon" /><img
+								src="images/visibility.svg"
 								alt=""
 								class="card-icon"
-							/><img src="/images/share.svg" alt="" class="card-icon" />
+							/><img src="images/share.svg" alt="" class="card-icon" />
 						</div>
 					</div>
 					<div class="card">
@@ -154,11 +154,11 @@
 							</div>
 						</div>
 						<div class="card-icons">
-							<img src="/images/star.svg" alt="" class="card-icon" /><img
-								src="/images/visibility.svg"
+							<img src="images/star.svg" alt="" class="card-icon" /><img
+								src="images/visibility.svg"
 								alt=""
 								class="card-icon"
-							/><img src="/images/share.svg" alt="" class="card-icon" />
+							/><img src="images/share.svg" alt="" class="card-icon" />
 						</div>
 					</div>
 					<div class="card">
@@ -170,11 +170,11 @@
 							</div>
 						</div>
 						<div class="card-icons">
-							<img src="/images/star.svg" alt="" class="card-icon" /><img
-								src="/images/visibility.svg"
+							<img src="images/star.svg" alt="" class="card-icon" /><img
+								src="images/visibility.svg"
 								alt=""
 								class="card-icon"
-							/><img src="/images/share.svg" alt="" class="card-icon" />
+							/><img src="images/share.svg" alt="" class="card-icon" />
 						</div>
 					</div>
 					<div class="card">
@@ -186,11 +186,11 @@
 							</div>
 						</div>
 						<div class="card-icons">
-							<img src="/images/star.svg" alt="" class="card-icon" /><img
-								src="/images/visibility.svg"
+							<img src="images/star.svg" alt="" class="card-icon" /><img
+								src="images/visibility.svg"
 								alt=""
 								class="card-icon"
-							/><img src="/images/share.svg" alt="" class="card-icon" />
+							/><img src="images/share.svg" alt="" class="card-icon" />
 						</div>
 					</div>
 					<div class="card">
@@ -203,11 +203,11 @@
 							</div>
 						</div>
 						<div class="card-icons">
-							<img src="/images/star.svg" alt="" class="card-icon" /><img
-								src="/images/visibility.svg"
+							<img src="images/star.svg" alt="" class="card-icon" /><img
+								src="images/visibility.svg"
 								alt=""
 								class="card-icon"
-							/><img src="/images/share.svg" alt="" class="card-icon" />
+							/><img src="images/share.svg" alt="" class="card-icon" />
 						</div>
 					</div>
 				
